# EssaMath

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  configure.sh
.github/workflows/: linux.yml
EssaMath/: CMakeLists.txt  init.sh
EssaMath/cmake/: LibraryConfig.cmake  SetEnv.cmake
EssaMath/include/: AffineUtils.hpp  CalculusUtils.hpp  Defines.hpp  EquationsUtils.hpp  EssaMath.hpp  Expression.hpp  ExpressionGenerator.hpp  ExpressionHelper.hpp  ExpressionNodes.hpp  ExpressionUtils.hpp  Faddeeva.hpp  FloatingPointUtils.hpp  Generator.hpp  Lexer.hpp  LinearAlgebraUtils.hpp  LispApi.hpp  LogarithmsUtils.hpp  NodeAllocator.hpp  NumberUtils.hpp  Numeric.hpp  NumericalUtils.hpp  OperatorHelpers.hpp  OperatorUtils.hpp  Operators.hpp  Optimize.inl  Parser.hpp  ParserHelpers.hpp  PolynomialsUtils.hpp  SeriesUtils.hpp  SimplificationUtils.hpp  SpecialFunctionsUtils.hpp  SymbolTable.hpp  SymmetriesUtils.hpp  Token.hpp  TrigUtils.hpp
EssaMath/src/cxx/: Defines.cpp  Expression.cpp  ExpressionGenerator_1.cpp  ExpressionGenerator_2.cpp  ExpressionGenerator_3.cpp  ExpressionUtils.cpp  Faddeeva.cpp  Generator.cpp  Lexer.cpp  LispApi.cpp  OpeeratorHelpers.cpp  OperatorUtils.cpp  Optimize_1.cpp  Optimize_2.cpp  Optimize_3.cpp  Optimize_4.cpp  Optimize_5.cpp  Parser.cpp  Parser_1.cpp  Parser_2.cpp  Parser_3.cpp  SimplificationUtils.cpp  Token.cpp
EssaMath/src/go/: .gitignore  CMakeLists.txt  EssaMath.go  Expression.go  OperatorUtils.go  Parser.go  SymbolTable.go  go.mod  init.sh
EssaMath/src/go/EssaMath_cxx/: EssaMath.cpp  EssaMath.h  Expression.cpp  Expression.h  OperatorUtils.cpp  OperatorUtils.h  Parser.cpp  Parser.h  SymbolTable.cpp  SymbolTable.h
Tests/: init.sh
Tests/cxx/: CMakeLists.txt  main.cpp
Tests/go/: go.mod  go.sum  main.go
cmake/: CompilerWarnings.cmake  StandardProjectSettings.cmake  StaticAnalysers.cmake
essamath/: 05_data_types_and_structures.c  06_expressions.c  07_operators.c  09_simplification.c  10_elementary_functions.c  11_maximas_database.c  14_polynomials.c  15_special_functions.c  16_elliptic_functions.c  17_limits.c  18_differentiation.c  19_integration.c  20_equations.c  21_differential_equations.c  22_numerical.c  23_matrices_and_linear_algebra.c  24_affine.c  25_itensor.c  26_ctensor.c  27_atensor.c  28_sums_products_and_series.c  29_number_theory.c  30_symmetries.c  31_runtime_environment.c  34_rules_and_patterns.c  35_sets.c  36_function_definition.c  CMakeLists.txt  essamath.c  expression.c  expression_domain.c  expression_functions.c  hashmap.c  math_utils.c  polylogarithm.c
essamath/include/: 05_data_types_and_structures.h  06_expressions.h  07_operators.h  09_simplification.h  10_elementary_functions.h  11_maximas_database.h  14_polynomials.h  15_special_functions.h  16_elliptic_functions.h  17_limits.h  18_differentiation.h  19_integration.h  20_equations.h  21_differential_equations.h  22_numerical.h  23_matrices_and_linear_algebra.h  24_affine.h  25_itensor.h  26_ctensor.h  27_atensor.h  28_sums_products_and_series.h  29_number_theory.h  30_symmetries.h  31_runtime_environment.h  34_rules_and_patterns.h  35_sets.h  36_function_definition.h  essamath.h  expression.h  expression_domain.h  expression_functions.h  hashmap.h  math_utils.h  polylogarithm.h
essamath/lisp/: cxx-api.lisp
essamath/src/cxx/: essamath.c
test/: CMakeLists.txt
test/05_data_types_and_structures/: 05_data_types_and_structures_test.cpp
test/arithmetic/: arithmetic_test.cpp
test/common/: test_utils.cpp
test/common/include/: test_utils.hpp
test/essamath/: CMakeLists.txt  essamath_test.cpp
